# RAG-ingestion-pyspark

./: .env.example  .gitignore  DESIGN.md  PERFORMANCE.md  README.md  RUNBOOK.md  enhanced_minimal_rag.py  pyproject.toml  requirements.txt  run_pipeline.ps1
data/raw/: README.md  sample.txt  sample_0.txt  sample_1.txt  sample_2.txt  sample_3.txt  test_document.txt
docker/: Dockerfile.api  Dockerfile.embedding  Dockerfile.spark  README.md  build_vector_store.sh  docker-compose.yml  run_chunking.sh  run_embedding.sh  run_full_pipeline.sh  run_ingestion.sh  start_api.sh
documentation/: design.md  original-requirements.md  requirements.md
experiments/: README.md  performance_metrics.py
rag/: README.md  api.py  vector_store.py
spark/: README.md  TEST_README.md  USAGE.md  chunk.py  embed.py  ingest.py  test_chunk.py  test_ingest.py
